--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>call-sys</module>
         <module>easy-retry</module>
         <module>alibaba-retry-demo</module>
+        <module>multiple-instances</module>
     </modules>
 
     <properties>
