--- a/alibaba-retry-demo/pom.xml
+++ b/alibaba-retry-demo/pom.xml
@@ -70,6 +70,12 @@
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.caucho</groupId>
+            <artifactId>hessian</artifactId>
+            <version>4.0.60</version>
+        </dependency>
     </dependencies>
 
 
